fix: resolve Java compiler warnings and type safety issues
- Fix raw Map type warnings in AuthController with proper generics
- Add @SuppressWarnings for unavoidable unchecked casts
- Replace deprecated RemoteJWKSet with JWKSourceBuilder
- Remove unused fields and variables across security classes
- Use ParameterizedTypeReference for type-safe REST calls